src/Microsoft.Health.Fhir.Liquid.Converter.UnitTests/TestData/TestTemplates/ValidValidateTemplates/ValidUnmatchedTemplate2.liquid
{% validate "TestSchema2.json" -%}
{
    "resourceType": "{{ msg.resourceType }}",
    "id": 123
}
{% endvalidate -%}
