src/Microsoft.Health.Fhir.Liquid.Converter.UnitTests/TestData/TestTemplates/InvalidValidateTemplates/ErrorSyntax.liquid
{% validate msg "TestSchema.json" -%}
{
}
{% endvalidate -%}